Mudar nome de base de dados

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ProjetoGestao-E453DCA5-F940-41BD-8DB4-95DA2926CF14;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ProjetoGestaoContext": "Server=(localdb)\\mssqllocaldb;Database=ProjetoGestaoContext-bb51022a-8727-4f24-8d23-c267720f6fad;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Projetos;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ProjetoGestaoContext": "Server=(localdb)\\mssqllocaldb;Database=ProjetoGestaoContext;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
